// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generate Edge cases handles empty spec: empty-spec-output 1`] = `
"import { z } from "zod";
import type { PathFn, HeaderFn, OperationDefinition, OperationErrors } from "zenko";

// Path Functions
export const paths = {
} as const;

// Header Functions
export const headers = {
} as const;

// Operation Objects
// Operation Types"
`;

exports[`generate Edge cases handles spec with no components: no-components-spec-output 1`] = `
"import { z } from "zod";
import type { PathFn, HeaderFn, OperationDefinition, OperationErrors } from "zenko";

// Path Functions
export const paths = {
  getTest: () => "/test",
} as const;

// Header Functions
export const headers = {
  getTest: () => ({}),
} as const;

// Operation Objects
export const getTest = {
  method: "get",
  path: paths.getTest,
} as const;

// Operation Types
export type GetTestOperation = OperationDefinition<
  "get",
  typeof paths.getTest,
  undefined,
  undefined,
  undefined,
  OperationErrors
>;
"
`;

exports[`generate Edge cases handles circular dependencies gracefully: circular-dependencies-output 1`] = `
"import { z } from "zod";
import type { PathFn, HeaderFn, OperationDefinition, OperationErrors } from "zenko";

// Generated Zod Schemas

export const B = z.object({
  a: A.optional(),
});

export type B = z.infer<typeof B>;

export const A = z.object({
  b: B.optional(),
});

export type A = z.infer<typeof A>;

// Path Functions
export const paths = {
} as const;

// Header Functions
export const headers = {
} as const;

// Operation Objects
// Operation Types"
`;

exports[`generate Type helpers generates complete inline output: petstore-inline-helpers-output 1`] = `
"import { z } from "zod";
type PathFn<TArgs extends unknown[] = []> = (...args: TArgs) => string;
type RequestMethod = "get" | "put" | "post" | "delete" | "options" | "head" | "patch" | "trace";
type HeaderFn<TArgs extends unknown[] = [], TResult = Record<string, unknown> | Record<string, never>> = (...args: TArgs) => TResult;
type OperationErrors<TClient = unknown, TServer = unknown, TDefault = unknown, TOther = unknown> = {
  clientErrors?: TClient;
  serverErrors?: TServer;
  defaultErrors?: TDefault;
  otherErrors?: TOther;
};
type OperationDefinition<TMethod extends RequestMethod, TPath extends (...args: any[]) => string, TRequest = undefined, TResponse = undefined, THeaders extends HeaderFn | undefined = undefined, TErrors extends OperationErrors | undefined = undefined> = {
  method: TMethod;
  path: TPath;
  request?: TRequest;
  response?: TResponse;
  headers?: THeaders;
  errors?: TErrors;
};

// Generated Zod Schemas

export const Pet = z.object({
  id: z.number().int(),
  name: z.string(),
  tag: z.string().optional(),
});

export type Pet = z.infer<typeof Pet>;

export const Pets = z.array(Pet);

export type Pets = z.infer<typeof Pets>;

export const Error = z.object({
  code: z.number().int(),
  message: z.string(),
});

export type Error = z.infer<typeof Error>;

// Path Functions
export const paths = {
  listPets: ({ limit }: { limit?: number } = {}) => {
    const params = new URLSearchParams()
    if (limit !== undefined) {
      params.set("limit", String(limit))
    }
    const _searchParams = params.toString()
    return \`/pets\${_searchParams ? \`?\${_searchParams}\` : ""}\`
  },
  createPets: () => "/pets",
  showPetById: ({ petId }: { petId: string }) => \`/pets/\${petId}\`,
} as const;

// Header Functions
export const headers = {
  listPets: () => ({}),
  createPets: () => ({}),
  showPetById: () => ({}),
} as const;

// Operation Objects
export const listPets = {
  method: "get",
  path: paths.listPets,
  response: Pets,
  errors: {
    defaultErrors: {
      defaultError: Error,
    },
  },
} as const;

export const createPets = {
  method: "post",
  path: paths.createPets,
  request: Pet,
  errors: {
    defaultErrors: {
      defaultError: Error,
    },
  },
} as const;

export const showPetById = {
  method: "get",
  path: paths.showPetById,
  response: Pet,
  errors: {
    defaultErrors: {
      defaultError: Error,
    },
  },
} as const;

// Operation Types
export type ListPetsOperation = OperationDefinition<
  "get",
  typeof paths.listPets,
  undefined,
  typeof Pets,
  undefined,
  OperationErrors<unknown, unknown, { defaultError: typeof Error }, unknown>
>;

export type CreatePetsOperation = OperationDefinition<
  "post",
  typeof paths.createPets,
  typeof Pet,
  undefined,
  undefined,
  OperationErrors<unknown, unknown, { defaultError: typeof Error }, unknown>
>;

export type ShowPetByIdOperation = OperationDefinition<
  "get",
  typeof paths.showPetById,
  undefined,
  typeof Pet,
  undefined,
  OperationErrors<unknown, unknown, { defaultError: typeof Error }, unknown>
>;
"
`;
